# aws_serverless_batch_deploment

./: .gitignore  Dockerfile  README.md  config.json  main.py  parms.json  project_flow.txt  pyproject.toml  response.json  template.py
.github/workflows/: ci_cd.yml  deploy-lambda.yml  docker_pipeline.yaml  training.yaml
lambda_batch_prediction/: lambda_function.py
lambda_batch_prediction/package/jmespath-1.0.1.dist-info/: RECORD
lambda_batch_prediction/package/numpy-2.3.2.dist-info/: RECORD
lambda_function/: app.py  requirements.txt
src/components/: ingestion.py  processing.py  training.py
src/pipeline/: stage01_data_ingestion.py  stage02_processing.py  stage03_training.py
